2010-06-18  Donal K. Fellows  <dkf@users.sf.net>

	* library/init.tcl (auto_execok): [Bug 3017997]: Add .cmd to the
	default list of extensions that we can execute interactively.

2010-06-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* tools/loadICU.tcl:   [Bug 3016135]: Traceback using clock format
	* library/msgs/he.msg: with locale of he_IL

2010-06-09  Andreas Kupries  <andreask@activestate.com>

	* library/platform/platform.tcl: Added OSX Intel 64bit
	* library/platform/pkgIndex.tcl: Package updated to version 1.0.9.
	* unix/Makefile.in:
	* win/Makefile.in:

2010-05-26  Donal K. Fellows  <dkf@users.sf.net>

	* doc/socket.n: [Bug 3007442]: Server sockets never took a host
	argument, so the list of options must precede the port argument.

2010-05-25  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tclUnixPort.h: [Bug 2991415]: tclport.h #included before
	* win/tclWinPort.h:		     limits.h
	* generic/tclInt.h:

2010-05-21  Jan Nijtmans  <nijtmans@users.sf.net>

	* tools/installData.tcl:  Make sure that copyDir only receives
	normalized paths. Backported from trunk.
	* generic/tclPlatDecls.h: Fix <tchar.h> inclusion for CYGWIN.
	Backported from trunk (although for trunk this was moved to
	tclWinPort.h)
	* generic/tclPathObj.c:   Fix Tcl_SetStringObj usage for CYGWIN. This
	function can only be used with unshared objects. This causes a crash
	on CYGWIN. (backported from trunk)
	* generic/tclFileName.c:  Don't declare cygwin_conv_to_win32_path here
	* win/tclWinChan.c:       Fix various minor other gcc warnings, like
	* win/tclWinConsole.c:    signed<->unsigned mismatch. Backported from
	* win/tclWinDde.c:        trunk.
	* win/tclWinNotify.c:
	* generic/tclStrToD.c:    [Bug 3005233]: fix for build on OpenBSD vax

2010-05-19 Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tclDictObj.c: Backport of fix for [Bug 3004007], EIAS
	* tests/dict.test:      violation in list-dict conversions.

2010-05-07  Andreas Kupries  <andreask@activestate.com>
