@@ -1,3 +1,8 @@
+2010-06-22  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclCmdIL.c (Tcl_LsetObjCmd): [Bug 3019351]: Corrected wrong
+	args message.
+
 2010-06-18  Donal K. Fellows  <dkf@users.sf.net>
 
 	* library/init.tcl (auto_execok): [Bug 3017997]: Add .cmd to the
